# stm32driverdev

./: README.md
C-Dev/Inc/: stm32f303xx.h  stm32f303xx_spi_driver.h
C-Dev/Src/: 002LEDInterrupt.c  002Led_button.c  006_spi_testing.c  stm32f303xx_gpio_driver.c  stm32f303xx_i2c_driver.c  stm32f303xx_spi_driver.c  stm32f303xx_usart_driver.c
Inc/: stm32f303xx_gpio_driver.h  stm32f303xx_i2c_driver.h  stm32f303xx_usart_driver.h
RustDev/stm32dev/: Cargo.toml  README.md  memory.x
RustDev/stm32dev/.cargo/: config.toml
RustDev/stm32dev/drivers/: README.md  stm32f303xx_gpio_driver.rs
Src/: 001LedToggle.c  LICENSE
